--- a/related_work.tex
+++ b/related_work.tex
@@ -85,7 +85,7 @@ correlated to the information to be generated~\cite{dpcslsh17}.
 This analysis makes the process of studying product lines a complex computational  task.
 
 An interesting aspect of \fodaPAp is that
-any of the research articles studied manage
+any of the research articles in the literature manage
 to describe in their work the use of multisets.
 Also, they do not explicitly work on
 the translation of \FODA\ to represent probabilities and they do
