Cambios en related work y empirical study

--- a/related_work.tex
+++ b/related_work.tex
@@ -89,7 +89,7 @@ any of the research articles in the literature manage
 to describe in their work the use of multisets.
 Also, they do not explicitly work on
 the translation of \FODA\ to represent probabilities and they do
-not introduce the notion of hiding those features not needed to
+not introduce the notion of hiding those not needed features to
 calculate the probability of a specific feature.
 
 In particular, there exist mathematical verification models that
