--- a/ex_operational.tex
+++ b/ex_operational.tex
@@ -187,7 +187,7 @@
         {$\feature{A}$}
         (B)
         (B) edge[->] node[above right, opacity=0, text opacity=1]
-        {$\checkmark$}
+        {$\checkmark,1-p$}
         (C)
         (B) edge[->] node[left, opacity=0, text opacity=1]
         {$\feature{B},p$}
