--- a/testing.tex
+++ b/testing.tex
@@ -4,33 +4,55 @@
 \label{sec:stat:impl}
 
 In the field of \SPLs\ analysis, the use of probabilistic methods carries two practical applications.
-The first one consists in calculating the probability of having a feature in a specific product.
+The first one consists in calculating the probability of having a
+feature in a specific product.
 This allows us to efficiently assign resources by prioritizing those features with a high probability
-of being included into the \SPL. The second application consists in estimating the testing coverage 
+of being included into the \SPL. The second application consists in estimating the testing coverage
 in the product line, which allows us to calculate those products that can be generated in the testing process.
+
+The idea to compute the probability of each feature is to hide all the
+other features and then compute the resulting \SPL. This approach is
+based on Proposition~\ref{prop:hid}. The problem with that Proposition
+is that we cannot remove the features involved in restrictions
+(requirement or exclusion) associated with the feature in which we are
+interested. So, we need to add to the non-hidden features those that
+appear in a restriction associated with the original one.
+\begin{example}
+  Let us assume that we want to compute the probability of $\fA$ in
+  the term
+  \begin{displaymath}
+    \exclude{B}{C}{\require{C}{A}{P}}
+    \end{displaymath}
+    Where \(P\) is a term without restrictions. Then we compute the
+    probability of $\fA$ in the term
+  \begin{displaymath}
+    \exclude{B}{C}{\require{C}{A}{(Q\hide{\{\fA, \fB, \fC\}})}}
+    \end{displaymath}
+
+\end{example}
 
 This section presents the results obtained from an experimental study to show the applicability and scalability of our
 approach. In order to carry out this study, we have implemented a set of scripts to demonstrate
 the applicability of the
 probabilistic extension - of the denotational semantics - presented in this paper. The source code of the
 scripts used in this section is available at the main project site
-\footnote{\url{http://ccamacho.github.io/phd/resources/03_splap.tar}}. In essence, we perform two experiments. 
+\footnote{\url{http://ccamacho.github.io/phd/resources/03_splap.tar}}. In essence, we perform two experiments.
 The former focuses on measuring the performance of our proposed implementation for processing a feature model.
 This means, given a feature model, calculating the time to
 compute the probability of having each feature in the
-valid products set. 
-The second experiment consists on analyzing the scalability of our proposed implementation. 
-The idea is to study if there is a correlation between the number of features of each type and the 
-processing time. The experiments have been executed in a computer with the following features: Intel(R) 
+valid products set.
+The second experiment consists on analyzing the scalability of our proposed implementation.
+The idea is to study if there is a correlation between the number of features of each type and the
+processing time. The experiments have been executed in a computer with the following features: Intel(R)
 Xeon(R) Quad-Core CPU E5-2670 @ 2.60GHz, 64 GB of RAM memory and Centos 7 Operating System.
 
 The study described in this section seeks to answer the following questions:
 
 \begin{itemize}
-	\item \textbf{RQ1}: Is it possible to translate current feature models to support probabilistic information?
-	\item \textbf{RQ2}: Is it possible to describe a formal framework that translates the current feature models
-	to probabilistic methods?
-	\item \textbf{RQ3}: What is the impact of applying probabilistic analysis methods to current feature models like \FODA?
+        \item \textbf{RQ1}: Is it possible to translate current feature models to support probabilistic information?
+        \item \textbf{RQ2}: Is it possible to describe a formal framework that translates the current feature models
+        to probabilistic methods?
+        \item \textbf{RQ3}: What is the impact of applying probabilistic analysis methods to current feature models like \FODA?
 \end{itemize}
 
 
@@ -51,25 +73,25 @@ Figure~\ref{fig:plot:betty:params} depicts the parameters used in the feature mo
 generator.
 
 \begin{figure}[h]
-	\centering
-	\linefigure
-	\includegraphics[width=0.8\hsize,angle=0]{BeTTy_website.png}
-	\linefigure
-	\caption{BeTTy parameters.}\label{fig:plot:betty:params}
+        \centering
+        \linefigure
+        \includegraphics[width=0.8\hsize,angle=0]{BeTTy_website.png}
+        \linefigure
+        \caption{BeTTy parameters.}\label{fig:plot:betty:params}
 \end{figure}
 
 
 BeTTy generates feature models based on a set of pre-defined parameters.
-The meaning of these parameters focuses on how 
+The meaning of these parameters focuses on how
 BeTTy randomly generates these models.
-In this case BeTTy requires 4 parameters, where the sum of the probabilities 
+In this case BeTTy requires 4 parameters, where the sum of the probabilities
 for these parameters must be 1, that is:
 
 \begin{itemize}
-	\item The probability of having a mandatory feature.
-	\item The probability of having an optional feature.
-	\item The probability of having a feature in a \emph{choose-one} relationship.
-	\item The probability of having a feature in a \emph{conjunction} relationship.
+        \item The probability of having a mandatory feature.
+        \item The probability of having an optional feature.
+        \item The probability of having a feature in a \emph{choose-one} relationship.
+        \item The probability of having a feature in a \emph{conjunction} relationship.
 \end{itemize}
 
 The values used for these parameters to generate the feature model are the following:
@@ -82,17 +104,17 @@ The values used for these parameters to generate the feature model are the follo
 \end{itemize}
 
 
-The idea of using this configuration is to have the same probability for the different 
+The idea of using this configuration is to have the same probability for the different
 relationships in the model, that is, we use a probability of 0.25 for both the
 \emph{choose-one} and \emph{conjunction} relationships.
 %We wanted to have the same probability of having the same relationships in the model, that is
 %the reason of having 0.25 for the  \emph{choose-one} and \emph{conjunction} .
 It is known that the optional features induce a  combinatorial explosion for creating
 all the possible valid products from a feature model. Since we are interested on investigating
-the performance of our approach, we use a probability of 0.3 for having optional features in 
+the performance of our approach, we use a probability of 0.3 for having optional features in
 the model and a probability of 0.2 for having mandatory features.
-The sum of all probabilities must be 1. If no weight is configured, all features and 
-relationships have a random weight, it being not possible to correlate the obtained results with 
+The sum of all probabilities must be 1. If no weight is configured, all features and
+relationships have a random weight, it being not possible to correlate the obtained results with
 our model analysis.
 Additionally, the percentage of cross-tree constraints is set to 10\%, which is not related to
 the sum of the probabilities of the previous parameters.
@@ -114,7 +136,7 @@ the time required to calculate the probability of having the feature in a final 
 %\acomen{Yo simplemente quitaría esa frase, lo de que la complejidad es lineal}
 It is important to remark that there is a small variation in the processing time for
 calculating the probability of each single feature. We think that this variation is
-mainly caused by both the stochastic nature of the generated model and the 
+mainly caused by both the stochastic nature of the generated model and the
 inherent noise of the node where the experiment is launched (e.g. disk latencies, operating
 system overhead, memory paging, etc.) and, therefore, it is not related to the algorithm itself.
 
@@ -123,67 +145,67 @@ the process scheduling may have a direct impact in the overall algorithm perform
 can be considered insignificant since, in general, the time for processing each feature in the model ranges
 from 15 to 28 milliseconds.
 
-The model used in the experiments has been generated and processed 10 times, providing similar results 
+The model used in the experiments has been generated and processed 10 times, providing similar results
 (see Table~\ref{execution_times}). That is, the
 major part of the features require between 14 and 20 milliseconds to be processed, while there is a small
 portion of them requiring a processing time between 20 and 36 milliseconds. However, there are unusual situations
 where a feature require 60 milliseconds to be processed.
 
 \begin{table}[h]
-	\centering
-	\begin{tabular}{|c|c|c|c|c|}
-		\hline
-		\textbf{Execution} & \textbf{Minimum} &  \textbf{Maximum} &  \textbf{Average} &  \textbf{Standard deviation} \\ \hline
-		\textit{1}		& 14	& 35	& 17.0247	& 3.0357 	\\ \hline
-		\textit{2}		& 14	& 41 	& 17.2325	& 3.3911	\\ \hline
-		\textit{3}		& 14	& 36 	& 16.3983 	& 3.0823 	\\ \hline
-		\textit{4}		& 14	& 34	& 16.5417	& 3.1394 	\\ \hline
-		\textit{5}		& 14	& 34	& 16.7105	& 3.1343 	\\ \hline
-		\textit{6}		& 14	& 43	& 16.7865	& 3.3871 	\\ \hline
-		\textit{7}		& 14	& 47	& 17.3589	& 3.9768 	\\ \hline
-		\textit{8}		& 14	& 63	& 17.6684	& 4.2557 	\\ \hline
-		\textit{9}		& 15	& 51	& 18.5851	& 4.3072 	\\ \hline				
-		\textit{10}		& 14	& 55	& 18.0947	& 4.4526 	\\ \hline			
-	\end{tabular}
-	\caption{Computing time analysis table.}
-	\label{execution_times}
+        \centering
+        \begin{tabular}{|c|c|c|c|c|}
+                \hline
+                \textbf{Execution} & \textbf{Minimum} &  \textbf{Maximum} &  \textbf{Average} &  \textbf{Standard deviation} \\ \hline
+                \textit{1}              & 14    & 35    & 17.0247       & 3.0357        \\ \hline
+                \textit{2}              & 14    & 41    & 17.2325       & 3.3911        \\ \hline
+                \textit{3}              & 14    & 36    & 16.3983       & 3.0823        \\ \hline
+                \textit{4}              & 14    & 34    & 16.5417       & 3.1394        \\ \hline
+                \textit{5}              & 14    & 34    & 16.7105       & 3.1343        \\ \hline
+                \textit{6}              & 14    & 43    & 16.7865       & 3.3871        \\ \hline
+                \textit{7}              & 14    & 47    & 17.3589       & 3.9768        \\ \hline
+                \textit{8}              & 14    & 63    & 17.6684       & 4.2557        \\ \hline
+                \textit{9}              & 15    & 51    & 18.5851       & 4.3072        \\ \hline
+                \textit{10}             & 14    & 55    & 18.0947       & 4.4526        \\ \hline
+        \end{tabular}
+        \caption{Computing time analysis table.}
+        \label{execution_times}
 \end{table}
 
 \begin{figure}[h]
-	\centering
-	\begin{minipage}[b]{0.48\textwidth}
-		\includegraphics[width=\textwidth]{plot_probs_probs.eps}
+        \centering
+        \begin{minipage}[b]{0.48\textwidth}
+                \includegraphics[width=\textwidth]{plot_probs_probs.eps}
 \caption{Probabilistic analysis for a 1500 features model.}\label{fig:plot:probs:probs}
-	\end{minipage}
-	\hfill
-	\begin{minipage}[b]{0.48\textwidth}
-		\includegraphics[width=\textwidth]{FeatureModel1500Features_histogram.eps}
-	\caption{Probabilistic histogram for processing a 1500 features model.}\label{fig:plot:probs:probs:sorted}
-	\end{minipage}
+        \end{minipage}
+        \hfill
+        \begin{minipage}[b]{0.48\textwidth}
+                \includegraphics[width=\textwidth]{FeatureModel1500Features_histogram.eps}
+        \caption{Probabilistic histogram for processing a 1500 features model.}\label{fig:plot:probs:probs:sorted}
+        \end{minipage}
 \end{figure}
 
 
-Figure~\ref{fig:plot:probs:probs} shows the probability of each feature - in the analyzed model - to 
+Figure~\ref{fig:plot:probs:probs} shows the probability of each feature - in the analyzed model - to
 be part of a final product, where the $x$-axis
 represents the feature ID and the $y$-axis represents the probability.
 Figure~\ref{fig:plot:probs:probs:sorted} represents a histogram of the calculated probabilities for a better
 readability of the results. This chart clearly shows that there exist
-different groups of features having a similar probability. In this case, the probability of the major part 
+different groups of features having a similar probability. In this case, the probability of the major part
 of the features ranges between 0.7 and 0.8.
 %
 Thus, there are 450 features with, at least, a probability equal to 0.75 of being in a final product. As a conclusion, this analysis might allow us to establish that by testing only the 30\% of the software product line components (450 features) we can ensure that, at least, the 75\% of the generated products, are tested.
 
-It is important to differentiate the probabilities defined in BeTTy, which are used to generate a 
+It is important to differentiate the probabilities defined in BeTTy, which are used to generate a
 feature model, and the probability - calculated from the model - to have a feature in a final
-product. 
+product.
 
 For instance, if we configure BeTTy to generate a feature model using a probability
 of 0.2 for having a mandatory feature, that means that 20\% of the generated features are mandatory.
 However, that does not imply that these features be part of the 20\% of the generated products, because
-the probability of having a feature in a final product depends on where this feature is placed in the 
+the probability of having a feature in a final product depends on where this feature is placed in the
 model. If a given mandatory feature is placed in a choose-one relationship, it is possible that
 the other branch is used to generate the final product, discarding the mandatory feature.
-Hence, we can not assume that these 20\% of the features will have a probability of 1 for being 
+Hence, we can not assume that these 20\% of the features will have a probability of 1 for being
 installed in the products.
 
 %For instance, if BeTTy is configured to generate mandatory features with a probability of 0.2 in a model, that will mean that those features will be presented in the model as mandatory with a probability of 0.2 and nothing else.
@@ -206,16 +228,16 @@ using a different number of features that ranges from 1.000 to 10.000 (in increm
 
 Specifically for each case, that is, given a configuration and a number of features,
 a model is randomly generated 30 times.
-Additionally, for each model, 100 features are 
+Additionally, for each model, 100 features are
 randomly selected and, for each one, both the processing time and memory
 required to calculate its probability are analyzed.
 
 
 
 Table~\ref{scalaExperiment} shows the configurations used to generate the
-variability models for this part of the empirical study, 
-where each configuration represents the set of probabilities chosen for each operator across the three experiments, 
-that is, \textit{Mandatory} represents the probability of having a mandatory feature, 
+variability models for this part of the empirical study,
+where each configuration represents the set of probabilities chosen for each operator across the three experiments,
+that is, \textit{Mandatory} represents the probability of having a mandatory feature,
  \textit{Optional} represents the probability of having an optional feature,
  \textit{Choose-one} represents the probability of having a feature in a \textit{choose-one} relation and
  \textit{Conjunction} represents the probability of having a feature in a \textit{conjunction} relation.
@@ -225,69 +247,69 @@ that is, \textit{Mandatory} represents the probability of having a mandatory fea
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 \textbf{Configuration} & \textbf{Mandatory} &  \textbf{Optional} &  \textbf{Choose-one} &  \textbf{Conjunction} \\ \hline
-	\textit{1}		& 0.69	& 0.15	& 0.15	& 0.01 	\\ \hline
-	\textit{2}		& 0.5		& 0.15 	& 0.15	& 0.2		\\ \hline
-	\textit{3}		& 0.2		& 0.15 	& 0.15 	& 0.5 	\\ \hline
+        \textit{1}              & 0.69  & 0.15  & 0.15  & 0.01  \\ \hline
+        \textit{2}              & 0.5           & 0.15  & 0.15  & 0.2           \\ \hline
+        \textit{3}              & 0.2           & 0.15  & 0.15  & 0.5   \\ \hline
 \end{tabular}
 \caption{Configuration of the scalability experiments.}
 \label{scalaExperiment}
 \end{table}
 
-In this experiment, we have set the same values for the probabilities of the \textit{Optional} 
-and \textit{Choose-one} features. Hence, these will remain the same 
+In this experiment, we have set the same values for the probabilities of the \textit{Optional}
+and \textit{Choose-one} features. Hence, these will remain the same
 across all the experiments and, thus, they should not interfere in the obtained results.
-We start with a low probability of having a \textit{Conjunction} relationship in the model. In this 
+We start with a low probability of having a \textit{Conjunction} relationship in the model. In this
 case, for the first experiment, we use a probability of 0.01, which is increased in the next configurations
-to 0.2 and 0.5, respectively. This idea is to show the impact of the \textit{Conjunction} relationship in the time 
+to 0.2 and 0.5, respectively. This idea is to show the impact of the \textit{Conjunction} relationship in the time
 and memory required for processing the models.
 
-For each configuration, we have generated 30 models per number of features, that is, we generate 
+For each configuration, we have generated 30 models per number of features, that is, we generate
 30 different models containing 1000 features, 30 different models containing 2000 features,
 and so on until 10.000 features.
 
 Figure~\ref{fig:plot:probs:boxplot_0_1} and figure~\ref{fig:plot:probs:boxplot_0_1_mem} show the execution time and the required amount of memory, respectively, for processing the variability models generated using \textit{Configuration 1}. In these models, only 1\% of the features have a conjunction relation. In general, the processing time when the number of features increases is linear. Only in few cases, where the number of features ranges from 5000 to 8000, the results provide anomalous values. This is mainly caused by the random nature of the generated models (30 for each case). On the contrary, the memory usage depicts that there are several groups where the memory usage remains constant, one group of models containing between 3,000 and 5,000 features and other group of models containing between 7,000 and 10,000 features. In summary, our implementation shows good scalability results for processing the models generated using \textit{Configuration 1}: it requires, in the worst case scenario, 215 ms and 0.32 GB of RAM to process the model.
 
 \begin{figure}[h]
-	\centering
-	\begin{minipage}[b]{0.48\textwidth}
-		\includegraphics[width=\textwidth]{boxplot_0_1.eps}
-		\caption{Execution time for processing models generated using \textit{Configuration 1}.}\label{fig:plot:probs:boxplot_0_1}
-	\end{minipage}
-	\hfill
-	\begin{minipage}[b]{0.48\textwidth}
-		\includegraphics[width=\textwidth]{boxplot_0_1_mem.eps}
-		\caption{Memory usage for processing models generated using \textit{Configuration 1}.}\label{fig:plot:probs:boxplot_0_1_mem}
-	\end{minipage}
+        \centering
+        \begin{minipage}[b]{0.48\textwidth}
+                \includegraphics[width=\textwidth]{boxplot_0_1.eps}
+                \caption{Execution time for processing models generated using \textit{Configuration 1}.}\label{fig:plot:probs:boxplot_0_1}
+        \end{minipage}
+        \hfill
+        \begin{minipage}[b]{0.48\textwidth}
+                \includegraphics[width=\textwidth]{boxplot_0_1_mem.eps}
+                \caption{Memory usage for processing models generated using \textit{Configuration 1}.}\label{fig:plot:probs:boxplot_0_1_mem}
+        \end{minipage}
 \end{figure}
 
 Figure~\ref{fig:plot:probs:boxplot_0_2} and figure~\ref{fig:plot:probs:boxplot_0_2_mem} show the results for analyzing the models generated using \textit{Configuration 2}. It is important to remark that 20\% of the features in the generated models have a conjunction relation. In this case, both the execution time and memory usage for processing a model when the number of features increases are exponential. These charts clearly show a turning point when the model reaches 6,000 features and, therefore, the required processing time and  memory are significantly lower for those models that do not reach 6,000 features. However, the requirements to process the model in the worst case scenario, that is, using a model containing 10,000 features, are 300 sec. and 3.84 GB of RAM memory, which are acceptable.
 
 \begin{figure}[h]
-	\centering
-	\begin{minipage}[b]{0.48\textwidth}
-		\includegraphics[width=\textwidth]{boxplot_0_2.eps}
-		\caption{Execution time for processing models generated using \textit{Configuration 2}.}\label{fig:plot:probs:boxplot_0_2}
-	\end{minipage}
-	\hfill
-	\begin{minipage}[b]{0.48\textwidth}
-		\includegraphics[width=\textwidth]{boxplot_mem.eps}
-		\caption{Memory usage for processing models generated using \textit{Configuration 2}.}\label{fig:plot:probs:boxplot_0_2_mem}
-	\end{minipage}
+        \centering
+        \begin{minipage}[b]{0.48\textwidth}
+                \includegraphics[width=\textwidth]{boxplot_0_2.eps}
+                \caption{Execution time for processing models generated using \textit{Configuration 2}.}\label{fig:plot:probs:boxplot_0_2}
+        \end{minipage}
+        \hfill
+        \begin{minipage}[b]{0.48\textwidth}
+                \includegraphics[width=\textwidth]{boxplot_mem.eps}
+                \caption{Memory usage for processing models generated using \textit{Configuration 2}.}\label{fig:plot:probs:boxplot_0_2_mem}
+        \end{minipage}
 \end{figure}
 
 Figure~\ref{fig:plot:probs:boxplot_0_5} and figure~\ref{fig:plot:probs:boxplot_0_5_mem} show the results for processing the models generated using \textit{Configuration 3}. In this case, half of the features in the model have a conjunction relation. Similarly to the previous experiment, these charts show that both the execution time and the memory usage for processing a model when the number of features increases are exponential. In the obtained results we can observe the same turning point detected in the previous models generated using  \textit{Configuration 2}, that is, when the model reaches 6,000 features. Model processing requirements, that is, execution time and memory usage, grow much faster for these models than for those based on previous configurations. Also, it is important to notice that the models containing 9,000 and 10,000 features cannot be processed due to memory limitations.
 
 \begin{figure}[h]
-	\centering
-	\begin{minipage}[b]{0.48\textwidth}
-		\includegraphics[width=\textwidth]{boxplot_0_5.eps}
-		\caption{Execution time for processing models generated using \textit{configuration 3}.}\label{fig:plot:probs:boxplot_0_5}
-	\end{minipage}
-	\hfill
-	\begin{minipage}[b]{0.48\textwidth}
-		\includegraphics[width=\textwidth]{boxplot_0_5_mem.eps}
-		\caption{Memory usage for processing models generated using \textit{configuration 3}.}\label{fig:plot:probs:boxplot_0_5_mem}
-	\end{minipage}
+        \centering
+        \begin{minipage}[b]{0.48\textwidth}
+                \includegraphics[width=\textwidth]{boxplot_0_5.eps}
+                \caption{Execution time for processing models generated using \textit{configuration 3}.}\label{fig:plot:probs:boxplot_0_5}
+        \end{minipage}
+        \hfill
+        \begin{minipage}[b]{0.48\textwidth}
+                \includegraphics[width=\textwidth]{boxplot_0_5_mem.eps}
+                \caption{Memory usage for processing models generated using \textit{configuration 3}.}\label{fig:plot:probs:boxplot_0_5_mem}
+        \end{minipage}
 \end{figure}
 
 
@@ -298,60 +320,60 @@ Figure~\ref{fig:plot:probs:boxplot_0_5} and figure~\ref{fig:plot:probs:boxplot_0
 
 In this section we discuss the obtained results from the empirical study and
 provide a comparison with the ones obtained using \fodaPA~\cite{acl13}
-and the cost extension \fodaPAc~\cite{clc16}. Specifically, we are interested in 
-comparing the performance between the implementation of the probabilistic 
-extension and the implementation of the denotational semantic from 
+and the cost extension \fodaPAc~\cite{clc16}. Specifically, we are interested in
+comparing the performance between the implementation of the probabilistic
+extension and the implementation of the denotational semantic from
 \fodaPA~\cite{acl13}. Also, we provide the answers for the research questions.
 
 The experiments carried out in Section~\ref{sec:stat:impl:performance:analysis}
 uses feature models containing a maximum of 10000 features. In general,
-these results show that increasing the number of features having a conjunction relation 
-has a direct impact on the overall performance. In fact, increasing the number of features having 
-a conjunction relation generates a combinatorial explosion that hampers the processing of models. 
-First, the execution time to completely process a model significantly grows. Second, large amounts 
-of memory are required to store those combinations. In some cases, using large models with a high 
-percentage of features having a conjunction relation may cause a bottleneck in the memory system. 
-In fact, models generated using \textit{Configuration 3} with 9,000 and 10,000 features cannot be 
-processed using 64 GB of RAM. In this case, 
+these results show that increasing the number of features having a conjunction relation
+has a direct impact on the overall performance. In fact, increasing the number of features having
+a conjunction relation generates a combinatorial explosion that hampers the processing of models.
+First, the execution time to completely process a model significantly grows. Second, large amounts
+of memory are required to store those combinations. In some cases, using large models with a high
+percentage of features having a conjunction relation may cause a bottleneck in the memory system.
+In fact, models generated using \textit{Configuration 3} with 9,000 and 10,000 features cannot be
+processed using 64 GB of RAM. In this case,
 the worst case scenario, which generates a model where the 50\% of the features are
 placed in a conjunction relationship, requires approximately 500000 ms.
 
 Figure~\ref{figure:tool:den:benchmark} shows the results of an experiment using
 models containing different number of features, which ranges from $50$ to $300$.
-In this case, we use the implementation of the denotational semantic from 
-\fodaPA~\cite{acl13} to process the models, which do not use probabilistic 
+In this case, we use the implementation of the denotational semantic from
+\fodaPA~\cite{acl13} to process the models, which do not use probabilistic
 information. If we use only the executions that successfully process the model,
-the worst case scenario requires 786126 ms to process a model containing 150 
-features. 
+the worst case scenario requires 786126 ms to process a model containing 150
+features.
 
 \begin{figure}[t]
-	\centering
-	\begin{minipage}{0.4\hsize}
-	\begin{tabular}{|rrr|}
-			\hline
-		Features&       Time (ms.)&    Products\\
-			\hline
-		50 & 6 & 48 \\
-		60 & 25 & 108 \\
-		70 & 15 & 104 \\
-		80 & 8 & 31 \\
-		90 & 38 & 0 \\
-		100 & 55 & 1404 \\
-		110 & 13 & 12 \\
-		120 & 2139 & 1 \\
-		130 & 511 & 24802 \\
-		140 & 7 & 6 \\
-		150 & 786126 & 1312848 \\
-		160 & 136 & 5670 \\
-		170 & 42 & 398 \\
-		\hline
-	\end{tabular}
-	\end{minipage}
-	\begin{minipage}{0.4\hsize}
-	\begin{tabular}{|rrr|}
-		\hline
-		Features&       Time (ms.)&    Products\\
-			\hline		
+        \centering
+        \begin{minipage}{0.4\hsize}
+        \begin{tabular}{|rrr|}
+                        \hline
+                Features&       Time (ms.)&    Products\\
+                        \hline
+                50 & 6 & 48 \\
+                60 & 25 & 108 \\
+                70 & 15 & 104 \\
+                80 & 8 & 31 \\
+                90 & 38 & 0 \\
+                100 & 55 & 1404 \\
+                110 & 13 & 12 \\
+                120 & 2139 & 1 \\
+                130 & 511 & 24802 \\
+                140 & 7 & 6 \\
+                150 & 786126 & 1312848 \\
+                160 & 136 & 5670 \\
+                170 & 42 & 398 \\
+                \hline
+        \end{tabular}
+        \end{minipage}
+        \begin{minipage}{0.4\hsize}
+        \begin{tabular}{|rrr|}
+                \hline
+                Features&       Time (ms.)&    Products\\
+                        \hline
 180 & 744 & 6384 \\
 190 & 1390 & 7232 \\
 200 & 960000 & - \\
@@ -365,42 +387,42 @@ features.
 280 & 960000 & - \\
 290 & 65 & 3 \\
 300 & 960000 & - \\
-		\hline
-	\end{tabular}
-	\end{minipage}
-	\caption{Denotational benchmark from \cite{acl13}.\label{figure:tool:den:benchmark}}
+                \hline
+        \end{tabular}
+        \end{minipage}
+        \caption{Denotational benchmark from \cite{acl13}.\label{figure:tool:den:benchmark}}
 \end{figure}
 
 
 
 
 Also, based on the results published in \fodaPAc~\cite{clc16},
-the models used for the simulations were processed in 
+the models used for the simulations were processed in
 an 8-node cluster. However, these models only contains 17 features.
-Figure~\ref{fig:cluster} shows the algorithm behavior 
+Figure~\ref{fig:cluster} shows the algorithm behavior
 which best time its approximately 300 seconds.
 
 \begin{figure}[t]
-	\centering
-	\linefigure
-	\resizebox{\columnwidth}{!}{%
-		\begin{tabular}{|c|c|c|c|c|c|c|}
-			\cline{2-7}
-			\multicolumn{1}{c|}{} & 1 Worker & 2 Workers & 4 Workers & 8 Workers & 16 Workers & 32 Workers  \\
-			\hline
-			1 Node & 2010.44763303 & 1060.80047798 & 586.014445066 & 543.712262154 & 521.616870165 & 521.292215109 \\
-			\hline
-			2 Nodes & 2059.06947899 & 1046.87119007 & 575.115453959 & 296.285589933 & 366.384442091 & 341.007520199 \\
-			\hline
-			4 Nodes & 2031.25184584 & 1093.52087283 & 586.344302893 & 320.010899067 & 300.745616913 & 382.748430014 \\
-			\hline
-			8 Nodes & 2207.35427213 & 1143.951792 & 576.370896101 & 495.507214785 & 308.374300957 & 287.340030909 \\
-			\hline
-		\end{tabular}
-	}\\
-	\includegraphics[width=0.7\hsize, height=5cm,angle=0]{plot_cluster.eps}
-	\linefigure
-	\caption{Cluster execution times for 1, 2, 4 and 8 nodes; and 1, 2, 4, 8, 16 and 32 workers  from~\cite{clc16}.}\label{fig:cluster}
+        \centering
+        \linefigure
+        \resizebox{\columnwidth}{!}{%
+                \begin{tabular}{|c|c|c|c|c|c|c|}
+                        \cline{2-7}
+                        \multicolumn{1}{c|}{} & 1 Worker & 2 Workers & 4 Workers & 8 Workers & 16 Workers & 32 Workers  \\
+                        \hline
+                        1 Node & 2010.44763303 & 1060.80047798 & 586.014445066 & 543.712262154 & 521.616870165 & 521.292215109 \\
+                        \hline
+                        2 Nodes & 2059.06947899 & 1046.87119007 & 575.115453959 & 296.285589933 & 366.384442091 & 341.007520199 \\
+                        \hline
+                        4 Nodes & 2031.25184584 & 1093.52087283 & 586.344302893 & 320.010899067 & 300.745616913 & 382.748430014 \\
+                        \hline
+                        8 Nodes & 2207.35427213 & 1143.951792 & 576.370896101 & 495.507214785 & 308.374300957 & 287.340030909 \\
+                        \hline
+                \end{tabular}
+        }\\
+        \includegraphics[width=0.7\hsize, height=5cm,angle=0]{plot_cluster.eps}
+        \linefigure
+        \caption{Cluster execution times for 1, 2, 4 and 8 nodes; and 1, 2, 4, 8, 16 and 32 workers  from~\cite{clc16}.}\label{fig:cluster}
 \end{figure}
 
 For those specific implementations and
@@ -414,7 +436,7 @@ presented in previous works~\cite{acl13,clc16}.
 
 Following, we provide the answers to the research questions.
 
-\textbf{RQ1}: Is it possible to translate current feature models to support 
+\textbf{RQ1}: Is it possible to translate current feature models to support
 probabilistic information?
 
 In order to ask this question we have implemented the denotational semantic
@@ -423,7 +445,7 @@ can state that the answer is yes, it is possible to translate current
 feature models, like \FODA, to represent and support probabilistic
 information.
 
-\textbf{RQ2}: Is it possible to describe a formal framework that translates 
+\textbf{RQ2}: Is it possible to describe a formal framework that translates
 the current feature models to probabilistic methods?
 
 General use models have been proposed to model variability in software
@@ -433,24 +455,24 @@ Thus, all previous work focuses on
 generic representations. However, this work is based on including probabilistic
 information to the well-known feature model \FODA.
 Based on our previous results~\cite{acl13,clc16}, together with the results
-presented in this work, we can state that state it is possible to 
-describe a formal framework that translates 
+presented in this work, we can state that state it is possible to
+describe a formal framework that translates
 the current feature models to probabilistic methods.
 
 
 
-\textbf{RQ3}: What is the impact of applying probabilistic analysis methods 
+\textbf{RQ3}: What is the impact of applying probabilistic analysis methods
 to current feature models like \FODA?
 
 In order to ask this question we carried out some experiments using
 our implementation of the denotational semantic \fodaPA~\cite{acl13}
 and the cost extension \fodaPAc~\cite{clc16}. The results obtained
-have been compared with the implementation of the probabilistic 
-extension. We observed that the latter is able to process larger 
+have been compared with the implementation of the probabilistic
+extension. We observed that the latter is able to process larger
 models faster, which provides a greater scalability when
-the size of the model to be processed grows. Since the probabilistic extension 
-focuses on hiding  those features that do not affect the processing of the 
-probability of given feature for being part of a valid product, the required 
+the size of the model to be processed grows. Since the probabilistic extension
+focuses on hiding  those features that do not affect the processing of the
+probability of given feature for being part of a valid product, the required
 tome for processing the model is considerably reduced.
 
 
@@ -900,4 +922,3 @@ tome for processing the model is considerably reduced.
 %%% mode: latex
 %%% TeX-master: "main"
 %%% End:
-
