--- a/operational.tex
+++ b/operational.tex
@@ -113,8 +113,7 @@ equitably distribute the probability between both
 branches, that is, $\frac{1}{2}$. We have preferred to use a simple definition of this operator, but it is easy to replace it by a more involved version of a probabilistic conjunction operator~\cite{ahk98}.
 %
 Rule $\nombreRegla{con3}$ requires that both branches agree on the
-termination of a product. Figures~\ref{example:op1}
-and~\ref{example:op2} contain some examples of the operational semantics.
+termination of a product. Figures~\ref{example:op1} to~\ref{example:op3} contain some examples of the operational semantics.
 %
 
 \input{ex_operational}
