--- a/concuPL.bib
+++ b/concuPL.bib
@@ -1882,15 +1882,19 @@ doi = {10.1145/2499777.2500725}
 }
 
 @INPROCEEDINGS{mgd12,
-author={M. Kwiatkowsa and G. Norman and D. Parker},
-booktitle={2012 Ninth International Conference on Quantitative Evaluation of Systems},
-title={The PRISM Benchmark Suite},
-year={2012},
-volume={},
-number={},
-pages={203-204},
-doi={10.1109/QEST.2012.14},
-ISSN={},
-month={Sept},}
+author={M. Kwiatkowska and G. Norman and D. Parker},
+title={{PRISM} 4.0: Verification of Probabilistic Real-time Systems},
+booktitle={Proc. 23rd International Conference on Computer Aided Verification (CAV'11)},
+year={2011},
+editor={G. Gopalakrishnan and S. Qadeer},
+pages={585--591},
+organization={},
+publisher={Springer},
+series={LNCS},
+volume={6806},
+address={},
+month={},
+note={},
+}
 
 
