--- a/equivalence.tex
+++ b/equivalence.tex
@@ -60,6 +60,16 @@ Proposition~\ref{prop:DenoOpe}.
   $(pr,p)\in\prodp(P)$.
 \ethm
 
+\begin{theorem}\mbox{ }
+  \begin{itemize}
+  \item Let $P,Q\in\fodaPAp$, then $P\equivprob Q$ iff
+    $\semden{P}=\semden{Q}$.
+  \item $\equivprob$ is a congruence.
+  \end{itemize}
+  \begin{proof}
+    This is a direct consequence of Theorem~\ref{prop:equivprob}
+  \end{proof}
+\end{theorem}
 
 
 %%% Local Variables:
