--- a/macros.tex
+++ b/macros.tex
@@ -240,7 +240,7 @@
 \renewcommand{\prod}{\ensuremath{\mathtt{prod}}}
 \newcommand{\prodp}{\ensuremath{\mathtt{prod}^\calP}}
 \newcommand{\prob}[1]{\ensuremath{\mathtt{prob}\left(#1\right)}}
-
+\newcommand{\equivprob}{\ensuremath{\mathrel{\equiv^\calP}}}
 
 
 
